...
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eab-6U-jZk">
                            <rect key="frame" x="0.0" y="20.5" width="384" height="34"/>
                            <accessibility key="accessibilityConfiguration" identifier="textFieldChannel"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hBG-cd-oMl">
                            <rect key="frame" x="0.0" y="54.5" width="384" height="31"/>
                            <accessibility key="accessibilityConfiguration" identifier="buttonChannel"/>
...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ev-TU-f6W">
                    <rect key="frame" x="40" y="568" width="334" height="50"/>
                    <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <accessibility key="accessibilityConfiguration" identifier="buttonClear"/>
                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="clear input">
                        <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                    </buttonConfiguration>
                    <connections>
                        <action selector="clearInpiut" destination="-1" eventType="touchUpInside" id="GdK-5X-AYF"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x5q-eu-YPW">
                    <rect key="frame" x="15" y="668" width="384" height="50"/>
                    <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <accessibility key="accessibilityConfiguration" identifier="buttonActivation"/>
                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="Activate">
                        <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                    </buttonConfiguration>
                    <connections>
...
