...
        }
        
        return currentCount == configurations.count
    }
    func updateUI()
    {
        statusLabel.text = "Apester units ready"
        activationButton.isEnabled = true
        waitingScreenTimer.invalidate()
    }
}
///
///
...
