...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x5q-eu-YPW">
                    <rect key="frame" x="15" y="662" width="384" height="50"/>
                    <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <accessibility key="accessibilityConfiguration" identifier="buttonActivation"/>
                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="Activate feed">
                        <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                    </buttonConfiguration>
                    <connections>
                        <action selector="activateFeed" destination="-1" eventType="touchUpInside" id="wMx-PA-ojF"/>
                    </connections>
                </button>
...
